--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 						<encoding>UTF-8</encoding>
 						<skip>true</skip>
 					</configuration>
+					<!--<configuration>-->
+						<!--<source>1.7</source>-->
+						<!--<target>1.7</target>-->
+						<!--<encoding>UTF-8</encoding>-->
+						<!--<skip>true</skip>-->
+					<!--</configuration>-->
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
